@@ -9,6 +9,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - patch #2739001 [export] XML does not allow spaces in element names, 
   thanks to Derek Schaefer - drummingds1
 - bug #2780722 [import] Incorrect maximum file size 
+- bug #2780356 [calendar] Null checkbox not unchecked when date is chosen 
 
 3.1.4.0 (2009-04-25)
 + patch #1808339 [doc] Apache SSLOptions and StdEnvVars FAQ,
